# videbo

./: .coveragerc  .flake8  .gitignore  .mypy.ini  404.html  README.md  config.example.ini  coverage.sh  create_deployment_package.sh  dev_generate_requests.example.py  dev_test_network.py  example.config.toml  example.config.yaml  generate_ovh_consumer_key.py  handle_video_request.odg  index.html  issue_cert.sh  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements-manager.txt  requirements.txt  setup.cfg  sitemap.xml
.github/: dependabot.yaml
.github/actions/setup-ffmpeg/: action.yaml
.github/workflows/: ci.yaml  test.yaml
advanced-config/: index.html
ansible/: init_content_node.retry  init_content_node.yml  init_distributor_node.yml  init_encoder_node.yml  inventory.ini
ansible/init-content-node/defaults/: main.yml
ansible/init-content-node/handlers/: main.yml
ansible/init-content-node/tasks/: config_nginx.yml  copy_project.yml  install.yml  main.yml  ramdisk.yml
ansible/init-content-node/templates/: livestreaming-content-node.service.j2  nginx_default_site.conf.j2  telegraf.conf.j2
ansible/init-content-node/tests/: test.yml
ansible/init-distributor-node/: README.md
ansible/init-distributor-node/defaults/: main.yml
ansible/init-distributor-node/handlers/: main.yml
ansible/init-distributor-node/tasks/: config_nginx.yml  copy_project.yml  install.yml  lvm_volume.yml  main.yml
ansible/init-distributor-node/templates/: config.ini.j2  create_lvm_volume.sh.j2  livestreaming-distributor-node.service.j2  nginx_default_site.conf.j2  videbo-distributor-node.service.j2  videbo-distributor.service.j2
ansible/init-distributor-node/tests/: test.yml
ansible/init-distributor-node/vars/: main.yml
ansible/init-encoder-node/defaults/: main.yml
ansible/init-encoder-node/tasks/: config_nginx.yml  copy_project.yml  install.yml  main.yml  monitoring.yml
ansible/init-encoder-node/templates/: livestreaming-encoder-node.service.j2  nginx.conf.j2  videbo-encoder-node.service.j2
ansible/init-encoder-node/vars/: main.yml
docs/: advanced-config.md  index.md  reverse-proxy.md  usage.md
docs/css/: extra.css
livestreaming/: __init__.py  __main__.py  auth.py  lms_api.py  misc.py  network.py  settings.py  streams.py  video.py  web.py
livestreaming/broker/: __init__.py  exceptions.py  grid.py  settings.py
livestreaming/broker/api/: __init__.py  models.py  routes.py
livestreaming/cli/: args.py  manager.py
livestreaming/content/: __init__.py  clients.py  streams_fetcher.py
livestreaming/content/api/: models.py  routes.py
livestreaming/distributor/: __init__.py  files.py
livestreaming/distributor/api/: models.py  routes.py
livestreaming/encoder/: __init__.py  streams.py
livestreaming/encoder/api/: models.py  routes.py
livestreaming/manager/: __init__.py  algorithms.py  create_word_database.py  db.py  deployment.py  monitoring.py  node_controller.py  node_types.py  random_word_database.pickle  storage_controller.py  streams.py
livestreaming/manager/api/: models.py  routes.py
livestreaming/manager/cloud/: __init__.py  cloud_api.py  cloud_deployment.py  definitions.py  dns_api.py  node.py  server.py  status.py
livestreaming/storage/: __init__.py  distribution.py  util.py  video.py
livestreaming/storage/api/: models.py  routes.py
requirements/: common.txt  dev.txt  full.txt
reverse-proxy/: index.html
scripts/: ci.sh  lint.sh  test.sh
search/: search_index.json
src/videbo/: __init__.py  __main__.py  auth.py  base_settings.py  client.py  config.py  exceptions.py  file_controller.py  hashed_file.py  lms_api.py  misc.py  models.py  network.py  route_def.py  temp_file.py  types.py  video.py  web.py
src/videbo/cli/: args.py  storage.py
src/videbo/distributor/: __init__.py  copying_file.py  distributed_file.py  exceptions.py  file_controller.py  files.py  node.py  scheduler.py  settings.py  start.py
src/videbo/misc/: __init__.py  constants.py  functions.py  generic_insight.py  lru_dict.py  periodic.py  singleton.py  task_manager.py
src/videbo/storage/: __init__.py  distribution.py  exceptions.py  file_controller.py  http_util.py  monitoring.py  settings.py  start.py  stored_file.py  thumbnail_cache.py  util.py
src/videbo/video/: analyze.py  models.py
tests/: __main__.py  base.py  dev_test_network.py  silent_log.py  sortable_mock.py  test___main__.py  test_auth.py  test_client.py  test_config.py  test_exceptions.py  test_file_controller.py  test_hashed_file.py  test_lms_api.py  test_misc.py  test_models.py  test_network.py  test_route_def.py  test_temp_file.py  test_web.py  utils.py
tests/_e2e/: base.py  config_dist.toml  config_dist.yaml  config_storage.toml  config_storage.yaml  e2e_test_storage_routes.py  e2e_test_with_distributor.py
tests/cli/: test_args.py  test_storage.py
tests/distributor/: test_file_controller.py  test_files.py  test_node.py  test_start.py
tests/distributor/api/: test_client.py  test_redirect.py
tests/manager/: test_cloud_dns_api.py
tests/misc/: test_functions.py  test_generic_insight.py  test_lru_dict.py  test_periodic.py  test_task_manager.py
tests/storage/: test_distribution.py  test_exceptions.py  test_file_controller.py  test_http_util.py  test_start.py  test_stored_file.py  test_thumbnail_cache.py  test_util.py
tests/storage/api/: integration_test_routes.py  test_client.py  (+1 more)
tests/video/: test_analyze.py  test_models.py
usage/: index.html
videbo/: __init__.py  __main__.py  auth.py  base_settings.py  exceptions.py  lms_api.py  misc.py  models.py  network.py  settings.py  streams.py  types.py  video.py  web.py
videbo/broker/: __init__.py  grid.py  settings.py
videbo/cli/: args.py  manager.py  storage.py
videbo/content/: __init__.py  streams_fetcher.py
videbo/distributor/: __init__.py  files.py  settings.py
videbo/encoder/: __init__.py  streams.py
videbo/manager/: __init__.py  algorithms.py  db.py  monitoring.py  node_controller.py  node_types.py  storage_controller.py  streams.py
videbo/storage/: __init__.py  distribution.py  exceptions.py  monitoring.py  util.py
(+24 files in other folders)
