##############################
# Python packaging settings: #

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "videbo"
description = "Video hosting server for learning management systems"
authors = [
    { name = "Martin Gauk", email = "gauk@math.tu-berlin.de" },
    { name = "Daniil Fajnberg", email = "mail@daniil.fajnberg.de" },
]
maintainers = [
    { name = "ISIS Team", email = "info@isis.tu-berlin.de" },
]
requires-python = ">=3.9, <4.0"
keywords = [
    "aiohttp",
    "asyncio",
    "asynchronous",
    "http",
    "lms",
    "moodle",
    "server",
    "streaming",
    "video",
]
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Topic :: Education",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version", "readme", "dependencies"]

[project.optional-dependencies]
full = ["prometheus-client==0.17.1"]
dev = [
    "build==0.10.0",
    "coverage==7.2.7",
    "flake8==6.1.0",
    "mkdocs-material==9.1.21",
    "mkdocstrings[python]==0.22.0",
    "mypy==1.4.1",
    "prometheus-client==0.17.1",
]

[project.urls]
repository = "https://github.com/innocampus/videbo"
bug_tracker = "https://github.com/innocampus/videbo/issues"
documentation = "https://innocampus.github.io/videbo"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = "requirements/common.txt" }
version = { attr = "videbo.__version__" }

##############################################
# Mypy configuration: (replacing `mypy.ini`) #

[tool.mypy]
files = "src/"
warn_unused_configs = true
strict = true
show_error_codes = true
plugins = [
    "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

#####################################################
# Coverage configuration: (replacing `.coveragerc`) #

[tool.coverage.run]
source = [
    "src/",
]
branch = true
command_line = "-m tests"
omit = [
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    '''if __name__ == ['"]__main__['"]:''',
    "@overload",
    "assert_never",
]
omit = [
    "tests/*",
]
