[metadata]
name = videbo
version = 0.1.0
author = Martin Gauk, Daniil Fajnberg
author_email = info@isis.tu-berlin.de
maintainer = Martin Gauk
maintainer_email = info@isis.tu-berlin.de
description = Video hosting server for learning management systems
long_description = file: README.md
long_description_content_type = text/markdown
keywords = aiohttp, asyncio, asynchronous, http, lms, moodle, server, streaming, video
url = https://github.com/innocampus/videbo
project_urls =
    Repository = https://github.com/innocampus/videbo
    Bug Tracker = https://github.com/innocampus/videbo/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: System Administrators
    Framework :: AsyncIO
    Framework :: aiohttp
    Topic :: Education
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Multimedia
    Topic :: Multimedia :: Video

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9, <4.0
install_requires =
    aiohttp==3.8.1
    pydantic==1.9.1
    PyJWT==2.4.0

[options.extras_require]
full =
    prometheus-client==0.14.1
dev =
    prometheus-client==0.14.1
    coverage==6.4.1

[options.packages.find]
where = src
